k8s/restgeld/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restgeld-backend
  labels:
    app: restgeld
    component: backend
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: restgeld
    component: backend
