k8s/restgeld/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restgeld-postgres
  labels:
    app: restgeld
    component: database
spec:
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
  selector:
    app: restgeld
    component: database
