k8s/restgeld/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restgeld-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - restgeld.stillon.top
      secretName: restgeld-tls
  rules:
    - host: restgeld.stillon.top
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: restgeld-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: restgeld-frontend
                port:
                  number: 80
